samples/_failures_safe/1761043463_a7cf96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4f89e11.c: In function ‘main’:
./samples/SAFE/__tmp_c4f89e11.c:173:41: error: expected ‘)’ at end of input
  173 |         if (scanf("%d %d %d", &from, &to
      |                  ~                      ^
      |                                         )
./samples/SAFE/__tmp_c4f89e11.c:173:9: error: expected declaration or statement at end of input
  173 |         if (scanf("%d %d %d", &from, &to
      |         ^~
./samples/SAFE/__tmp_c4f89e11.c:173:9: error: expected declaration or statement at end of input
